# node-explorer

./: .dockerignore  .env_example  .gitignore  README.md  buildspec.yml  pyproject.toml
backend/: Dockerfile
backend/src/nycmesh_ospf_explorer/: __init__.py  app.py  graph.py
backend/test/: test_graph.py  test_utils.py
explorer-backend/: .dockerignore  .env_example  Dockerfile  nginx.conf  pyproject.toml  uwsgi.ini
explorer-backend/src/nycmesh_ospf_explorer/: app.py  graph.py  main.py  utils.py
explorer-backend/test/: test_graph.py  test_utils.py
explorer-backend/test/sample_graphs/: four_node_graph.json  mesh_ospf_data_2023_09_29.json  nine_node_graph.json  nine_node_graph_with_asymmetric_costs.json  three_node_graph.json  three_node_graph_with_metadata.json
explorer-frontend/: .dockerignore  .env  .eslintrc.json  Dockerfile  package-lock.json  package.json
explorer-frontend/public/: index.html
explorer-frontend/src/: App.js
explorer-frontend/src/components/: DatetimeInput.js  GraphView.js  GraphViewSettings.js  JSONDataAccordion.js  LastUpdatedCard.js  Layout.js  NodeAndEdgeSelector.js  NodeGraph.js  NodeSearchBar.js  OurNavBar.js  SelectedNodeDetail.js  SimpleTooltip.js
explorer-frontend/src/constants/: index.js
explorer-frontend/src/lib/: GraphHelpers.js  utils.js
explorer-frontend/src/pages/: Explorer.js  OutageSimulator.js
explorer-frontend/src/styles/: App.css  CytoscapeStyles.js
frontend/: .env  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: GraphView.js  Layout.js  (+5 more)
(+5 files in other folders)
